--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <ul>
     <li><a href="./2023/demo01.html">无缝滚动</a></li>
     <li><a href=".">校验</a></li>  
+    <li><a href="./2023/demo01-fetch.html">fetch校验</a></li>
+    <li><a href="./01.js/array.html">数组</a></li>  
   </ul>
-  
-  
 </body>
 </html>
